# Gen7_Autochecker

./: CONTRIBUTING.md  Gen7_config.json  README.md  Run_Tests.bat  post_processing.py
Offline_analizer/: .gitattributes  .gitignore  (+8 more)
Offline_analizer/Platform/Carmaker/Common/UdpTestApp/: 1_build_release.bat  CMakeLists.txt  UdpClient.cpp
Offline_analizer/Platform/Carmaker/DLL/: .gitignore  0_install_conan.bat  1_build_debug.bat  1_build_release.bat  CMakeLists.txt  conanfile.py  config.yaml
Offline_analizer/Platform/Carmaker/DLL/src/: CMakeLists.txt
Offline_analizer/Platform/Carmaker/DLL/src/Apps/: AppManager.cpp  AppManager.h  BaseApp.h  CMakeLists.txt  readme.md
Offline_analizer/Platform/Carmaker/DLL/src/Apps/UdpServerApp/: CMakeLists.txt  CSysVar.cpp  CSysVar.h  ErrorReporter.cpp  ErrorReporter.h  FixedSizeQueue.h  UdpServerApp.cpp  UdpServerApp.h
Offline_analizer/Platform/Carmaker/DLL/src/CCLInterface/: CMakeLists.txt  MainCCL.cpp
Offline_analizer/Platform/Carmaker/DLL/src/CCLInterface/ccl_lib/: CCL.cpp  CCL.h  CMakeLists.txt  IADASDataAccess.h  VIA.h  VIA_ADAS.h  VIA_CAN.h  VIA_Ethernet.h  VIA_FunctionBus.h  VIA_LIN.h  VIA_SignalAccess.h  VIA_Socket.h
Offline_analizer/Platform/Carmaker/DLL/src/CCLInterface/mingw_symbols/: CMakeLists.txt  MinGW_Symbols.cpp  MinGW_Symbols.h
Offline_analizer/Platform/Carmaker/DLL/tools/: udptester.py
Offline_analizer/Platform/Carmaker/Executable/: .gitignore  0_configure_cmake.bat  1_build_carmaker.bat  CMakeLists.txt  README.md
Offline_analizer/Platform/Carmaker/Executable/lib/UssSimulatorInterface/: CMakeLists.txt
Offline_analizer/Platform/Carmaker/Executable/lib/UssSimulatorInterface/include/: EchoGenerator.h  RbDefines.h  RbUltraSonics.h  UdpMultiTester.h  UsbMultiTester.h  UssCoordinates.h  UssPoint.h  UssSensor.h  UssSensorObject.h  UssSimulator.h
Offline_analizer/Platform/Carmaker/Executable/lib/UssSimulatorInterface/src/: EchoGenerator.cpp  RbDefines.cpp  RbUltraSonics.cpp  UdpMultiTester.cpp  UsbMultiTester.cpp  UssCoordinates.cpp  UssPoint.cpp  UssSensor.cpp  UssSensorObject.cpp  UssSimulator.cpp
Offline_analizer/Platform/Carmaker/Executable/src/: CM_Main.cpp  CM_Vehicle.cpp  IO.cpp  IOVec.h  RB_CarMaker_Custom.cpp  RB_CarMaker_Custom.h  UdpClient.cpp  UdpClient.h  User.cpp  User.h  ussInterfaceAdapterFord.cpp  ussInterfaceAdapterFord.h
Offline_analizer/Platform/Carmaker/Executable/src/car/: carParametersDVAs.cpp  carParametersDVAs.h  fillCarParameters.cpp  fillCarParameters.h
Offline_analizer/Platform/Carmaker/Executable/src/common/: commonDefinitions.h  objectData.h
Offline_analizer/Platform/Carmaker/Executable/src/groundTruth/: fillLineData.cpp  fillLineData.h  lineDataDVAs.cpp  lineDataDVAs.h
Offline_analizer/Platform/Carmaker/Executable/src/motion/: fillMotion.cpp  fillMotion.h  motionDVAs.cpp  motionDVAs.h
Offline_analizer/Platform/Carmaker/Executable/src/radarObject/: fillRadarObjectData.cpp  fillRadarObjectData.h  radarObjectDataDVAs.cpp  radarObjectDataDVAs.h
Offline_analizer/Platform/Carmaker/Executable/src/radarTS/: RadarTS.h  RadarTS_GUI_ApoMsg.h  sUDP.h
Offline_analizer/Platform/Carmaker/Executable/src/traffic/: fillTrafficObject.cpp  fillTrafficObject.h  trafficDVAs.cpp  trafficDVAs.h
Offline_analizer/Platform/Carmaker/Executable/src/trafficSign/: fillTrafficSignData.cpp  fillTrafficSignData.h  trafficSignDVAs.cpp  trafficSignDVAs.h
Offline_analizer/Platform/Carmaker/Executable/src/videoObject/: fillVideoObjectData.cpp  fillVideoObjectData.h  videoObjectDataDVAs.cpp  videoObjectDataDVAs.h
Offline_analizer/Platform/Classe/DLL/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ReadMe.txt  conan_build_1objXloc.bat  conan_build_RoadObj.bat  conan_build_clara.bat  conanfile.txt
Offline_analizer/Platform/Classe/DLL/RoadObj/: ContiDataHandling.cpp  ContiDataHandling.hpp  DataHandling.cpp  DataHandling.hpp  RA6SGU_DataHandling.cpp  RA6SGU_DataHandling.hpp  Radar.cpp  Radar.hpp  RoadObj.cpp  RoadObj.hpp  Sensor.cpp  Sensor.hpp  Video.cpp  Video.hpp  capl_dll.cpp
Offline_analizer/Platform/Classe/DLL/Tests/: loc_plot.py  tests_main.cpp
Offline_analizer/Platform/Classe/DLL/UnitTests/: build_and_test_object_calc.bat
Offline_analizer/Platform/Classe/DLL/clara_model/: CMakeLists.txt  build_clara_model.bat
Offline_analizer/Platform/Classe/DLL/clara_model/Sources/: DataHandling.h  clara_MathLibrary.cpp  clara_MathLibrary.hpp  clara_calc.cpp  test.cpp  tests_main.cpp
Offline_analizer/Platform/Classe/DLL/clara_model/Sources/claraSim/: .gitattributes  .gitignore  CONTRIBUTING.md  makefileClaraSim.mk  readme.md
Offline_analizer/Platform/Classe/DLL/clara_model/Sources/claraSim/framework/: CBool.cpp  CBool.h  CBoolVector.cpp  CBoolVector.h  CClass_ct.cpp  CClass_ct.h  CClothoid.cpp  CClothoid.h  CFifo.cpp  CFifo.h  CFloat.cpp  CFloat.h  CFloatVector.cpp  CFloatVector.h  CInt.cpp  CInt.h  CIntVector.cpp  CIntVector.h  CLine.cpp  CLine.h  CLowPass.cpp  CLowPass.h  CLowPass2ndOrder.cpp  CLowPass2ndOrder.h  CLowPass3rdOrder.cpp  CLowPass3rdOrder.h  CMessage.cpp  CMessage.h  CMessageInput.cpp  CMessageInput.h  CMessageOutput.cpp  CMessageOutput.h  CMessageParameter.cpp  CMessageParameter.h  CModule.cpp  CModule.h  CModuleVector.cpp  CModuleVector.h  CSplineAkima.cpp  CSplineAkima.h  (+5 more)
Offline_analizer/Platform/Classe/DLL/clara_model/Sources/claraSim/world/: CWorld.cpp  CWorld.h  CWorldBike.cpp  CWorldBike.h  CWorldTruck.cpp  CWorldTruck.h
Offline_analizer/Platform/Classe/DLL/object_calc/: .gitignore  CMakeLists.txt  build_object_calc.bat
Offline_analizer/Platform/Classe/DLL/object_calc/Sources/: DataHandling.h  MathLibrary.cpp  MathLibrary.hpp  SignalCalc.cpp  SignalCalc.hpp  loc_plot.py  object_calc.cpp  tests_main.cpp
Offline_analizer/Platform/Classe/DLL/rotation/: CMakeLists.txt  build.bat
Offline_analizer/Platform/Classe/DLL/rotation/Sources/: Target_Calc.h  dllRotation.cpp
Offline_analizer/Platform/Classe/DLL/star_model/Source/: DataHandling.h  capldll.cpp
Offline_analizer/Platform/Classe/DLL/statistical_reflection_model/: CRadarReflectionModel.cpp  CRadarReflectionModel.h
(+4406 files in other folders)
